--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">ReRevise</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA13wrVkFIKBZuP6dFIbujNX8S17Y_y4hU</string>
 </resources>
